fixes alignment of logo on FAQ page

--- a/app/stylesheets/_faq.sass
+++ b/app/stylesheets/_faq.sass
@@ -1,6 +1,9 @@
 body.application.faq
   background-image: url('/images/clouds.png')
   background-repeat: repeat-x
+  header
+    text-align: left
+
   text-align: center
   h1
     width: 960px
